# b2b-ecommerce-platform

./: .gitignore  .prettierrc.yml  README.md  docker-compose.yml  pyproject.toml
b2b_ec_etl/: Dockerfile  ETL.md  README.md  pyproject.toml
b2b_ec_etl/src/b2b_ec_etl/defs/analytics/: __init__.py  asset.py  jobs.py  resources.py
b2b_ec_etl/src/b2b_ec_etl/defs/generation/: __init__.py  asset.py  jobs.py  resources.py
b2b_ec_etl/src/b2b_ec_etl/defs/ingestion/: __init__.py  asset.py  jobs.py  resources.py
b2b_ec_etl/src/b2b_ec_etl/defs/ingestion/core/: __init__.py  file_raw.py  models.py  postgres_raw.py  process.py  staging.py  state.py
b2b_ec_etl/src/b2b_ec_etl/defs/ingestion/scripts/: load_runner.py  process_runner.py  raw_capture_runner.py  run_ingestion.py
b2b_ec_warehouse/: README.md  dbt_project.yml  pyproject.toml
b2b_ec_warehouse/analysis/: monthly_sales_last_year.sql  top_5_used_devices.sql  top_products_in_top_login_country.sql
b2b_ec_warehouse/models/marts/: dim_companies.sql  dim_countries.sql  dim_customers.sql  dim_datetime.sql  dim_products.sql  fct_company_catalog_prices.sql  fct_marketing_leads_current.sql  fct_marketing_leads_history.sql  fct_order_items.sql  fct_orders.sql  fct_webserver_logs.sql  marts.yml
b2b_ec_warehouse/models/staging/: __sources.yml  staging.yml  stg_companies.sql  stg_company_catalogs.sql  stg_customers.sql  stg_marketing_leads_current.sql  stg_marketing_leads_history.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_ref_countries.sql  stg_webserver_logs.sql
b2b_etl/: README.md  pyproject.toml
b2b_warehouse/: dbt_project.yml  pyproject.toml
b2b_warehouse/macros/: generate_schema_name.sql
deploy_infra/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
docs/: INSTRUCTIONS.md
scripts/reset/: __init__.py  delete_buckets.py  reset_all.py  reset_ingestion_metadata.py  reset_minio.py  reset_motherduck.py  reset_postgres.py
scripts/test/: reader.py
