[project]
name = "b2b-ec-etl"
description = "ETL components for B2B e-commerce platform"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "dagster==1.12.20",
    "duckdb==1.4.4",
    "dbt-core>=1.10.8",
    "dbt-duckdb>=1.10.0",
    "dagster-dbt>=0.28.1",
    "dagster-duckdb>=0.28.1",
    "pydantic-settings>=2.12.0",
    # Custom Packages
    "b2b-ec-utils",
    "b2b-ec-sources",
]

[dependency-groups]
dev = ["dagster-webserver", "dagster-dg-cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "b2b_ec_etl"
registry_modules = ["b2b_ec_etl.components.*"]

[tool.uv.sources]
b2b-ec-utils = { workspace = true, editable = true }
b2b-ec-sources = { workspace = true, editable = true }
