[project]
name = "b2b_etl"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "dagster==1.12.20",
    "dbt-core>=1.10.8",
    "dbt-duckdb>=1.10.0",
    "dagster-dbt>=0.28.1",
    "dagster-duckdb>=0.28.1",
    "pydantic-settings>=2.12.0",
    # Custom Packages
    "b2b_utils",
]

[dependency-groups]
dev = ["dagster-webserver", "dagster-dg-cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "b2b_etl"
registry_modules = ["b2b_etl.components.*"]
